--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'dev.dworks.libs:volleyplus:0.1.4'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
 }
